CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(cumd)

FIND_PACKAGE(CUDA REQUIRED)

FILE(GLOB SOURCES "*.c" "*.cc" "*.cu")
set(CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_60,code=sm_60 -Wno-deprecated-gpu-targets ) 
#SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -arch=sm_60 ) 
#SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -arch=sm_60 -Wno-deprecated-gpu-targets )
#SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -rdc=true )
set(CMAKE_C_FLAGS "-std=c99") 

CUDA_ADD_EXECUTABLE(main ${SOURCES})
